welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:5: error: not found: value rep
		rep = "Fizz"
                ^fizzBuzz:9: error: not found: value rep
		rep = "Buzz"
                ^fizzBuzz:12: error: not found: value rep
rep = ""+a
^fizzBuzz:13: error: not found: value rep
return rep
       ^