welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = 
{
	if(a%3 == 0)
	{
		rep = "Fizz"
	}
	if(a%5 == 0)
	{ 
		rep = "Buzz"
	}
	
rep = ""+a
return rep
}
